CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(openpose-plus++)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
FIND_PACKAGE(stdtensor REQUIRED)
FIND_PACKAGE(stdnn-ops REQUIRED)
FIND_PACKAGE(stdtracer REQUIRED)

IF(ENABLE_CUDA)
    FIND_PACKAGE(stdnn-ops-cuda REQUIRED)
ELSE()
    ADD_DEFINITIONS(-DUSE_FAKE_CUDA_RUNTIME)
ENDIF()

FIND_PACKAGE(OpenCV REQUIRED)

IF(USE_OPENBLAS)
    INCLUDE(cmake/blas.cmake)
ENDIF()
INCLUDE(cmake/utils.cmake)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/include)

ADD_LIBRARY(paf src/paf.cpp src/vis.cpp)
TARGET_USE_STDTENSOR(paf)
TARGET_USE_STDNN_OPS(paf)
TARGET_LINK_LIBRARIES(paf opencv_core opencv_imgproc opencv_imgcodecs)

ADD_EXAMPLE_MAIN(src/example-main.cpp)
